syntax = "proto3";

package patient.messages;

option java_multiple_files = true;

message PatientMessage {
  string patientId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string message_type = 5;
}